--- a/pom.xml
+++ b/pom.xml
@@ -8,4 +8,11 @@
     <artifactId>battleship</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
+    </dependencies>
 </project>
